# Samplepython1

./: .gitignore  Dockerfile  MANUAL.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/secure_app/: __main__.py  api.py  cli.py  crypto.py  demo.py  http_client.py  httpclient.py  storage.py  validation.py
tests/: conftest.py  test_crypto.py  test_demo.py  test_http_client.py  test_validation.py  testapi.py  testdemo.py  testhttpclient.py  teststorage.py
